--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.37.2",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.6.0",
+    "datauri": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
-    "datauri": "^3.0.0"
-  },
+    "nodemon": "^3.1.4",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.7.5"
+  }
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
